# OpenMPI_Practice

./: README.md  doExperiments.py  matrix.ipynb  message.ipynb  minmax.ipynb  myplots.py  scalar.ipynb
C++/: CMakeLists.txt  matrixFox.cpp  matrixStrip.cpp  message.cpp  minmax.cpp  scalar.cpp
data/: message_ASynchro.csv  message_CommonMemory.csv  message_NoFeedback.csv  message_WithFeedback.csv  minmax_mpi.csv  scalar_mpi.csv
data/OpenMPI/: matrix_fox.csv  matrix_strip.csv  message_ASynchro.csv  message_CommonMemory.csv  message_NoFeedback.csv  message_WithFeedback.csv  minmax_mpi.csv  scalar_mpi.csv
